ES6, React, Vue, etc...

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -5,4 +5,6 @@ block locals
 
 block content
   h1 Hellow, World!
+  div#react-root
+  div#vue-root
   img(src='../images/doberman-1334497_640.jpg')
