git_practice finished!!

--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -8,6 +8,11 @@ html(lang='en')
     meta(charset= 'UTF-8')
     meta(name='vewport' content='width=device-width, initial-scale=1.0')
     title #{title}
-  body
+
+body
+  .container
     include _menu.pug
+    h1 #{title}
     block content
+    .footer
+      | Webpack Course
