--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,3 +1,26 @@
-body{
-  color: aquamarine;
+@import 'menu.scss';
+@import 'footer.scss';
+
+
+html, body, div, p, img, h1, h2, h3, h4, h5 {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-family: sans-serif;
+  color: teal;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+.container {
+  width: 980px;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0.5em;
 }
