--- a/src/templates/_menu.pug
+++ b/src/templates/_menu.pug
@@ -1,3 +1,7 @@
-div
-  a(href='./index.html') index.html
-  a(href='./access.html') access.html
+.menu
+  .menu__item
+    a(href="/index.html") index.html
+  .menu__item
+    a(href="/access.html") access.html
+  .menu__item
+    a(href="/members/taro.html") members/taro.html
